# summerProjectCalendar

./: CMakeLists.txt  README.md  client.cpp  client.h  clienthttp.cpp  clienthttp.h  customcalendarwidget.cpp  customcalendarwidget.h  logindialog.cpp  logindialog.h  main.cpp  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  myserver.cpp  myserver.h  notes.db  notes_shared.db  notesdatabase.cpp  notesdatabase.h  registerdialog.cpp  registerdialog.h  resources.qrc  server.py  sharedeventsnetwork.cpp  sharedeventsnetwork.h  thememanager.cpp  thememanager.h
server/: main.py
